--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
         "noEmitOnError": true,
         "sourceMap": true,
         "strict": true,
-        "noUnusedParameters": true, // Waring a parameter don't use inside a function
-        "noUnusedLocals": true, // Waring a variable don't use inside a function
+        "declaration": true,
+        // "noUnusedParameters": true, // Waring a parameter don't use inside a function
+        // "noUnusedLocals": true, // Waring a variable don't use inside a function
         "strictNullChecks": true, // Check a variable is nullable,
         "noUncheckedIndexedAccess": true, // Check a variable is undefined
     },
